--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ console.log(getCookie("city2"))
 		localStorage.setItem('clear', clear.style='display: true')
 		newCity.innerHTML = "Ваш город: " + city.value
 
+		console.log(getCookie("test1"))
+		console.log(getCookie("city2"))
 
 	};
 
